--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Auto Parts Finder</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='/stylesheets/reset.css'>
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <%#= session[:user_id] %>
-  <header>Autopartssale</header>
+  <header>
+    <h1>Auto Parts Finder</h1>
+  </header>
   <nav>
     <div class="nav_right">
       <a href="/">HOME</a>
