--- a/views/new_car.erb
+++ b/views/new_car.erb
@@ -35,9 +35,11 @@
     <label for="">Air Filter Parts No.</label>
     <input type="text" name="air_filter">
   </div>
-
-  <button>Register car details</button>
+  <div class="button">
+    <button>Register car details</button>
+    <a href="/db?id=<%= 13 %>">
+      <button>Return to car DB</button>
+    </a>
+  </div>
 </form>
-  <a href="/db?id=<%= 13 %>">
-    <button>Return to car DB</button>
-  </a>
+  
