--- a/views/edit_user.erb
+++ b/views/edit_user.erb
@@ -1,5 +1,5 @@
 
-<form action="/user_update?id=<%= @user["id"] %>" method="post">
+<form class="user_edit" action="/user_update?id=<%= @user["id"] %>" method="post">
   <input type="hidden" name="_method" value="patch">
   <div>
     <label for="">User name</label>
@@ -25,9 +25,11 @@
     <label for="">New password</label>
     <input type="password" name="password">
   </div>
-  <button>Update my details</button>
+  <div class="button">
+    <button>Update my details</button>
+    <a class="return_profile" href="/user_details?id=<%= @user["id"] %>">
+      <button>Return to my profile</button>
+    </a>
+  </div>
 </form>
 
- <a href="/user_details?id=<%= @user["id"] %>">
-    <button>Return to my profile</button>
-  </a>
