--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
-<form action="/login" method="post"  >
+<form class="loginform" action="/login" method="post"  >
   <label for="">User email</label>
   <input type="text" name="email">
   <label for="">Password</label>
