--- a/views/members.erb
+++ b/views/members.erb
@@ -1,10 +1,34 @@
-<h1>Hello Admin!</h1>
+<% if @user == '13' && @user == session[:user_id] %> 
+  <div class="members_list">
+    <h2>Members List</h2>
+  </div>
 
-<div class="griduser">
-  <% @users.each do |user| %>
-    <div class="item">
-        <h3>  <%= user["username"] %> , <%= user["email"] %></h3>
-      
-    </div>
-  <% end %>
-</div>
+  <table class="members_list_table">
+    <tr>
+      <th>User name</th>
+      <th>User email</th>
+      <th>User car</th>  
+      <th>Model year</th>
+      <th>Cars ID</th>
+    </tr>
+    <% @users.each do |user| %>
+      <tr>
+        <td> <%= user["username"] %> </td>
+        <td> <%= user["email"] %> </td>
+        <td> <%= user["users_car"] %> </td>
+        <td> <%= user["users_car_year"] %> </td>
+        <td> <%= user["users_car_id"] %> </td>
+      </tr>
+    <% end %>
+  </table>
+<% else %>
+  <div class="wrongway">
+    <h1> Incorrect input for memberdetails </h1>
+    <div class="wrongway_form">
+      <form action="/logout" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <button>Return to Home</button>
+      </form>
+    </div>  
+  </div>
+<% end %>
