--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,4 +1,4 @@
-<form class="user_new"action="/user_create" method="post"  >
+<form class="user_new" action="/user_create" method="post"  >
   <div>
     <label for="">User name</label>
     <input type="text" name="username">
@@ -23,11 +23,7 @@
     <label for="">password</label>
     <input type="password" name="password">
   </div>
-  <div>
+  <div class="button">
     <button>Sign Up!</button>
   </div>
-
-
-
-
 </form>
