--- a/views/result_by_model.erb
+++ b/views/result_by_model.erb
@@ -10,7 +10,7 @@
     <form action="/search_by_parts_number" method= "get">
       <label for=""></label>
       <div class="align">
-        <input type="text" name = "parts_number" placeholder = 'Enter parts number here.'>   
+        <input type="text" name = "parts_number" placeholder = 'Enter parts number.'>   
         <button>Search</button>
       </div> 
     </form>
@@ -29,7 +29,7 @@
 
 
   <div class="cataloge deactive">
-    <form action="/search_by_make" method= "get">
+    <form action="/" method= "get">
       <div class="align">
         <select class="select-css" name="make" placeholder="Select Make">
           <option value=""disabled selected hidden>Select your option</option>
