--- a/views/result_by_model.erb
+++ b/views/result_by_model.erb
@@ -1,6 +1,6 @@
 <div class="search_way">
   <ul>
-    <li class="li_cataloge" >Cataloge Search</li>
+    <li class="li_catalogue" >Catalogue Search</li>
     <li class="li_keywords" >Keywords Search</li>
     <li class="li_parts_num" >Parts Number Search</li>
   </ul>
@@ -28,7 +28,7 @@
   </div>
 
 
-  <div class="cataloge deactive">
+  <div class="catalogue deactive">
     <form action="/" method= "get">
       <div class="align">
         <select class="select-css" name="make" placeholder="Select Make">
