--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -66,10 +66,10 @@ main {
   position: absolute;
   border-radius: 10px 10px 10px 10px;
 }
-.li_cataloge {
+.li_catalogue {
   background: rosybrown;
 }
-.cataloge {
+.catalogue {
   background: rosybrown;
 }
 .li_keywords {
@@ -129,20 +129,6 @@ main {
 	font-weight:normal;
 } 
 
-/* 
- .option-css {
-  background: #f00; 
-  color: #fff; 
-  box-shadow: inset 20px 20px #f00
-} 
-
-.option-css:hover {
-  color: #000; 
-  box-shadow: inset 20px 20px #00f;
-  background: tomato;
-} */
-
-
 .active {
   display: block;
 }
@@ -153,9 +139,7 @@ main {
 
 .parts {
   display: grid;
-  /* grid-template-columns: 100px 100px 100px; */
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   grid-gap: 10px 20px;
   text-align: center;
   margin: 2% 6% 2% 6%;
@@ -170,12 +154,6 @@ main {
   height: 150px;
 }
 
-
-
-/* img {
-  width: 100%;
-  height: 100%;
-} */
 .item {
   width: 100%;
   height: 100%;
@@ -188,11 +166,8 @@ main {
 
 .grid {
   display: grid;
-  /* grid-template-columns: 100px 100px 100px; */
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
-  
-  
 }
 
 
