--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <main>
   <div class="search_way">
     <ul>
-      <li class="li_cataloge" >Cataloge Search</li>
+      <li class="li_catalogue" >Catalogue Search</li>
       <li class="li_keywords" >Keywords Search</li>
       <li class="li_parts_num" >Parts Number Search</li>
     </ul>
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="cataloge deactive">
+    <div class="catalogue deactive">
       <form action="/" method= "get">
         <div class="align">
           <select class="select-css" name="make" placeholder="Select Make">
